Fixed problem I had on my own phone with overlay not going all the way to the bottom on several pages. Managed to get footer down after a brief period where it blocked the navbar up top due to having high z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@
   bottom: 0;
   border: 0;
   background: url("../images/wedding-sunset.jpg");
+  background-position: center;
   background-repeat: repeat;
   background-size: cover;
   -webkit-background-size: cover;
@@ -53,8 +54,12 @@
 }
 
 .bg-about {
-  height: 100vh;
-  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 0;
   background: url("../images/wedding-sweetness.jpeg");
   background-position: center;
   background-repeat: no-repeat;
@@ -62,11 +67,16 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  z-index: -1;
 }
 
 .bg-contact {
-  height: 100vh;
-  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 0;
   background: url("../images/wedding-bride.jpeg");
   background-position: center;
   background-repeat: no-repeat;
@@ -74,6 +84,7 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  overflow: hidden;
 }
 
 .opaque-overlay {
@@ -163,6 +174,13 @@
 
 #footer {
     position: fixed;
+    bottom: 0px;
+    width: 100%;
+    margin: 0;
+    z-index: 10;
+}
+.footer-details {
+    position: absolute;
     bottom: 0px;
     width: 100%;
     margin: 0;
